# my_pg_rust_extension

./: .gitignore  Cargo.toml  makefile  readme.md
src/: deploy.rs  lib.rs
